[gd_scene load_steps=6 format=2]

[ext_resource path="res://Wall.tscn" type="PackedScene" id=1]
[ext_resource path="res://title-icon.png" type="Texture" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://LineOfDoom.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 144.5, 0.5 )

[node name="Game" type="Node2D"]
script = ExtResource( 3 )

[node name="LeftWall" parent="." instance=ExtResource( 1 )]
position = Vector2( 360, 376 )

[node name="RightWall2" parent="." instance=ExtResource( 1 )]
position = Vector2( 682, 376 )

[node name="BottomWall3" parent="." instance=ExtResource( 1 )]
position = Vector2( 520, 544 )
rotation = 1.5708

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.961
one_shot = true

[node name="Title" type="Sprite" parent="."]
position = Vector2( 136, 57 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="Player1Label" type="Label" parent="."]
margin_left = 57.0
margin_top = 136.0
margin_right = 97.0
margin_bottom = 150.0
text = "PLAYER 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2Label" type="Label" parent="."]
margin_left = 55.0
margin_top = 363.0
margin_right = 113.0
margin_bottom = 377.0
text = "PLAYER 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineOfDoom" type="Area2D" parent="."]
position = Vector2( 376, 198 )
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="LineOfDoom"]
position = Vector2( 144.5, -0.5 )
shape = SubResource( 1 )

[node name="TimerOfDoom" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="body_entered" from="LineOfDoom" to="LineOfDoom" method="_on_LineOfDoom_body_entered"]
[connection signal="body_exited" from="LineOfDoom" to="LineOfDoom" method="_on_LineOfDoom_body_exited"]
[connection signal="timeout" from="TimerOfDoom" to="." method="_on_TimerOfDoom_timeout"]
